--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <a href="#!">
         <i class="fab fa-linkedin fa-2x"></i>
       </a>
-      <a href="#!">
+      <a href="https://robelberhe.github.io/personal/" target="_blank">
         <i class="fab fa-github fa-2x"></i>
       </a>
     </div>
