--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <span class="text-secondary">Berhe</span>
     </h1>
     <h2 class="sm-heading">
-      Web Developer, Editor, Artist & Photographer
+      Web Developer, Artist & Photographer
     </h2>
     <div class="icons">
       <a href="#!">
