--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
           <div class="slide"><img src="./img/Project/head.jpg" alt="hamburg" width="720px" height="510px"></div>
           <div class="slide"><img src="./img/Project/smoker.jpg" alt="hamburg" width="720px" height="510px"></div>
           <div class="slide"><img src="./img/Project/woman.jpg" alt="hamburg" width="720px" height="510px"></div>
-          <div class="slide"><img src="./img/Project/smoker.jpg" alt="hamburg" width="720px" height="510px"></div>
+          <div class="slide"><img src="./img/Project/.jpg" alt="hamburg" width="720px" height="510px"></div>
         </div>
       </div>
   </div>
